Don't force a full decoder reset on seek in VTVDA.

Instead, set a flag (|waiting_for_idr_|), and wait for the next IDR
before using the current configuration again (including for POC
computation). This allows us to re-use the same decoder if the config
has not actually changed.

BUG=601892

Review URL: https://codereview.chromium.org/1882533002

Cr-Commit-Position: refs/heads/master@{#386803}

Former-commit-id: dc5535cdd973f0bc70f258afb52bde49b3e37ab5