content/common/gpu/media/vt_video_decode_accelerator_mac.h
@@ -255,6 +255,7 @@ class VTVideoDecodeAccelerator : public media::VideoDecodeAccelerator {
   int last_pps_id_;
   std::vector<uint8_t> last_pps_;
   bool config_changed_;
+  bool waiting_for_idr_;
   bool missing_idr_logged_;
   media::H264POC poc_;
 
